--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
         "name": "typescript-lit-html-plugin"
       }
     ],
-    "typeRoots" : ["node_modules/@types", "src/types"]
+    "typeRoots" : ["node_modules/@types", "src/types"],
+    "include": ["src/components", "src/custom.d.ts"]
   }
 }
